update messages schema
